<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_role_gunner"
        android:id="@+id/button_role_gunner"
        android:layout_above="@+id/button_role_engineer"
        android:layout_centerHorizontal="true"
        android:onClick="gunnerChosen"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_role_engineer"
        android:id="@+id/button_role_engineer"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="engineerChosen"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_role_scientist"
        android:id="@+id/button_role_scientist"
        android:layout_below="@+id/button_role_engineer"
        android:layout_centerHorizontal="true"
        android:onClick="scientistChosen"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/role_description"
        android:id="@+id/role_description"
        android:layout_marginTop="24dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>