<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nl.tudelft.pixelperfect.pixelperfect.MainActivity">

    <TextView android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_description" />

    <EditText
        android:id="@+id/ip_address"
        android:layout_below="@id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ip_address_hint"
        android:inputType="text" />

    <Button xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/button_connect"
        android:layout_below="@id/ip_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_connect"
        android:onClick="connect" />


</RelativeLayout>
